refactor(kalender): Personen-Zuordnung als eigener Dienst, Schreibpfad testfest
Der Personenblock wandert aus dem CalendarEventService in einen
CalendarEventPersonService (Muster CalendarCategoryService). Der Kalender
verliert damit zwei Repositories und jedes Wissen ueber Nutzerkonten; beide
reden nur noch ueber Termin-Ids, Nutzer-Ids und fertige Ansichten.

Kein Test pinnte bisher, an welche Zeilen-Id geschrieben wird: die save-Mocks
gaben ihr Argument ohne Id zurueck, sodass replace(id, ...) statt
replace(saved.getId(), ...) in updateOccurrence gruen geblieben waere — obwohl
das die Personen der Serie statt die des Vorkommens ueberschreibt. Die
save-Stubs vergeben jetzt Ids, und die Verifikation prueft die Zeilen-Id.

Weiter:
- delete raeumt die Zuordnungen nicht mehr explizit ab. Die Zusage "Absicherung,
  falls der Fremdschluessel je gelockert wird" liess sich nicht halten: die
  Override-Zeilen derselben Methode, update bei geaenderter RRULE und
  deleteOccurrence haengen ohnehin allein an der Kaskade. Jetzt gilt eine Regel.
- CalendarPersonView.of(AppUser) wird benutzt statt umgangen; die Zwischenform
  Map<Long, String> weicht Map<Long, AppUser>.
- toResponse bekommt auch die Personen uebergeben statt sie selbst zu holen.
- Redundanter Leer-Guard entfernt (findAllById schneidet selbst ab).
- serialVersionUID und @EqualsAndHashCode an CalendarEventPerson.
- validate heisst validateAndResolveCategory.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>